--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <nav class="nav">
         <div class="nav__wrapper">
-          <button class="nav__wrapper--hamburger" aria-label="Open menu">
+          <button class="nav__wrapper--hamburger">
             <div class="nav__wrapper--hamburger-line"></div>
             <div class="nav__wrapper--hamburger-line"></div>
             <div class="nav__wrapper--hamburger-line"></div>
@@ -36,7 +36,7 @@
               <li><a class="nav__wrapper--rightcontent-list-content" href="#">Contact us</a></li>
               <li><a class="nav__wrapper--rightcontent-list-content" href="#">TCS WORLDWIDE</a></li>
             </ul>
-            <button class="nav__wrapper--rightcontent-search" aria-label="Open search">
+            <button class="nav__wrapper--rightcontent-search">
               <img class="nav__wrapper--rightcontent-search-img" src="./assets/search-icon.svg" alt="search icon">
             </button>
             <img class="nav__wrapper--rightcontent-tata" src="./assets/tata logo.svg" alt="tata logo">
@@ -48,7 +48,7 @@
           <div class="nav__search-inner">
             <img class="nav__search-icon" src="./assets/search-icon.svg" alt="search">
             <input class="nav__search-input" type="text" placeholder="What are you looking for?">
-            <button class="nav__search-close" aria-label="Close search">X</button>
+            <button class="nav__search-close">X</button>
           </div>
         </div>
 
